examples/test/testpolicy16316.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16316
  namespace: namespace76
spec:
  podSelector:
    matchLabels:
      key18: value16
      key12: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key9: value36
          key6: value7
      podSelector:
        matchLabels:
          key7: value40
          key38: value45
          key14: value47
